--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,13 +2,13 @@ version: '3.8'
 
 services:
   mongo:
-    image: mongo:6.0.8
+    image: mongo:4.4.23
     container_name: scrapy_spiders_mongo
     environment:
-      - "TZ=Asia/Shanghai"
-      - MONGO_INITDB_ROOT_USERNAME=admin
-      - MONGO_INITDB_ROOT_PASSWORD=password
-      - MONGO_INITDB_DATABASE=products_crawler
+      - 'TZ=Asia/Shanghai'
+      - MONGO_INITDB_ROOT_USERNAME=${MONGO_USER}
+      - MONGO_INITDB_ROOT_PASSWORD=${MONGO_PASSWORD}
+      - MONGO_INITDB_DATABASE=${MONGO_DB}
     restart: always
     ports:
       - '27017:27017'
