--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 pillow == 10.0.0
 pillow-avif-plugin == 1.3.1
 pymongo == 4.4.*
+python-dotenv == 1.0.0
 scrapy == 2.9.0
 scrapy-playwright >= 0.0.26
