--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-opencv-python == 4.8.0.74
+opencv-python==4.8.0.*
 pillow == 10.0.0
 pillow-avif-plugin == 1.3.1
-pymongo == 4.4.*
+pymongo == 4.5.*
 python-dotenv == 1.0.0
 scrapeops-scrapy == 0.5.2
-scrapy == 2.10.0
-scrapy-playwright >= 0.0.28
+scrapy==2.10.*
+scrapy-playwright==0.0.*
